--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,10 +10,10 @@ jobs:
   get-version:
     runs-on: ubuntu-latest
     steps:
-      - name: Version on checkout@v4
-        uses: shiipou/github-actions/.github/workflows/get-version.yml@main #import depuis un dépôt tiers
+      - name: Get Version from External Workflow
+        uses: shiipou/github-actions/.github/workflows/get-version.yml@main # Import d'un dépôt tiers
         with:
-          realease-branch: '^(main)$'
+          release-branch: '^(main)$'
       
  # run-tests:
  #   runs-on: ubuntu-latest
@@ -21,7 +21,7 @@ jobs:
  #     uses:
       
   build:
-    name: Spring build
+    name: Spring Build
     runs-on: ubuntu-latest
     needs: 
       - get-version
@@ -29,15 +29,20 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Print version
+      - name: Print Version
         run: echo "${{needs.get-version.outputs.version}}"
-      - name: actions/checkout@v4
+        
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
+
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+        uses: gradle/gradle-build-action@v2
 
       - name: Build with Gradle
         run: ./gradlew build
