--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,6 +10,9 @@ jobs:
   get-version:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
       - name: Get Version from External Workflow
         uses: shiipou/github-actions/.github/workflows/get-version.yml@main # Import d'un dépôt tiers
         with:
