ci: continue on error true

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,6 +11,7 @@ jobs:
   test:
     name: Spring test
     runs-on: ubuntu-latest
+    continue-on-error: true
     services:
       # Label used to access the service container
       postgres:
