--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,9 +19,9 @@ jobs:
         image: postgres
         # Provide the password for postgres
         env:
-          POSTGRES_DB: training
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: forknow
+          POSTGRES_USER: forknow
+          POSTGRES_PASSWORD: forknow
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -70,4 +70,24 @@ jobs:
         run: ./gradlew bootjar
       - uses: actions/upload-artifact@v4
         with:
+          name: spring
           path: build/libs/
+
+    
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [ get-version, build ]
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4.1.8
+        with:
+          name: spring
+          path: build/
+      - name: Create GitHub Release
+        env:
+          VERSION: "${{ needs.get-version.outputs.version }}"
+          REPO: "${{ github.repository }}"
+          COMMIT: "${{ github.sha }}"
+        run: |
+          gh release create --repo $REPO --target $COMMIT $VERSION build/*
