--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,6 +40,8 @@ jobs:
           java-version: 17
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
+      - name: Grant Execute Permission for Gradle Wrapper
+        run: chmod +x ./gradlew
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build with Gradle
